Add basis for history based quantile reward function
Upload of history data and adding relevant info into db
